--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -25,6 +25,23 @@
 - Media Queries
 */
 
+html {
+  background: url(../images/cat.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+#bottom {
+    bottom: 0;
+    position: fixed;
+}
+
+.bottom-text {
+  color: white;
+}
+
 
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
